--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "concurrently \"tsc -w\" \"nodemon ./dist/index.js\"",
+    "dev": "nodemon src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -15,13 +15,15 @@
     "express-handlebars": "^6.0.6",
     "morgan": "^1.10.0",
     "mysql2": "^2.3.3",
-    "sequelize": "^6.25.3",
-    "typescript": "^4.8.4"
+    "sequelize": "^6.25.3"
   },
   "devDependencies": {
     "@types/express": "^4.17.14",
     "@types/morgan": "^1.9.3",
-    "concurrently": "^7.5.0",
-    "nodemon": "^2.0.20"
+    "@types/node": "^18.11.8",
+    "nodemon": "^2.0.20",
+    "ts-node": "^10.9.1",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^4.8.4"
   }
 }
