--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/method-override": "^0.0.32",
     "express": "^4.18.2",
     "express-handlebars": "^6.0.6",
+    "method-override": "^3.0.0",
     "morgan": "^1.10.0",
     "mysql2": "^2.3.3",
     "sequelize": "^6.25.3"
