--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "tsc && pnpm run copy && node dist/index.js",
+    "copy": "cp -r src/Views dist",
     "dev": "nodemon src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -11,7 +13,6 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@types/method-override": "^0.0.32",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.6",
     "cookie-session": "^2.0.0",
@@ -35,6 +36,7 @@
     "@types/express": "^4.17.14",
     "@types/express-session": "^1.17.5",
     "@types/jsonwebtoken": "^8.5.9",
+    "@types/method-override": "^0.0.32",
     "@types/morgan": "^1.9.3",
     "@types/node": "^18.11.8",
     "@types/passport": "^1.0.11",
